<resources>

    <string name="app_name">Gaming Backlog</string>

    <!-- MainActivity -->
    <string name="title_status">Status</string>
    <string name="title_library">Library</string>
    <string name="title_discover">Discover</string>
    <!-- DetailsActivity -->
    <string name="title_activity_details">Game Details</string>
    <string name="video_content_description">Game Video</string>
    <string name="details_error">An unexpected error has occurred.</string>
    <string name="no_video_available">No video available</string>
    <string name="video_title" translatable="false">Game Awards 2016 Trailer</string>
    <string name="video_summary" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- DiscoverFragment -->
    <string name="connection_error">An error has occurred. Please check your internet connection and try again.</string>
    <string name="cover_content_description">Game Cover</string>
    <string name="game_name" translatable="false">The Legend of Zelda: Breath of the Wild</string>
    <string name="game_release_year" translatable="false">2017</string>

    <!-- Widget -->
    <string name="now_playing">Now Playing</string>
    <string name="beaten">Beaten</string>
    <string name="no_games">No Games</string>

    <!-- Sample AdMob App ID -->
    <string name="ad_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <!-- Sample Banner ad unit ID -->
    <string name="ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

</resources>
