<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/detail_padding_bottom"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.details.DetailsActivity"
            tools:showIn="@layout/activity_details">

            <ImageView
                android:id="@+id/iv_game_cover"
                android:layout_width="@dimen/game_cover_size"
                android:layout_height="@dimen/game_cover_size"
                android:layout_margin="@dimen/item_margin"
                android:background="@color/colorBackground"
                android:contentDescription="@string/cover_content_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/tv_game_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                android:textSize="@dimen/game_name_text_size"
                android:ellipsize="end"
                android:maxLines="2"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_game_cover"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_game_release"
                tools:text="@string/game_name" />

            <TextView
                android:id="@+id/tv_game_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                app:layout_constraintBottom_toBottomOf="@id/iv_game_cover"
                app:layout_constraintLeft_toRightOf="@id/iv_game_cover"
                tools:text="@string/game_release_year" />

            <TextView
                android:id="@+id/tv_game_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin"
                app:layout_constraintTop_toBottomOf="@id/iv_game_cover"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:text="@string/video_summary" />

            <FrameLayout
                android:id="@+id/view_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_game_summary">

                <ProgressBar
                    android:id="@+id/pb_loading_indicator"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_videos"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:padding="@dimen/no_video_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_video_available" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
